--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -2430,7 +2430,7 @@
 		}
 
 			.image.phone .inner, .image.phone:before, .image.phone:after {
-				border-color: #e6e6e6;
+				border-color: #000;
 				background: #000;
 			}
 
