--- a/doodalman/Base.lproj/Main.storyboard
+++ b/doodalman/Base.lproj/Main.storyboard
@@ -443,7 +443,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xnf-3X-qeX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1402" y="-545"/>
+            <point key="canvasLocation" x="1401" y="-619"/>
         </scene>
         <!--방 등록-->
         <scene sceneID="dxm-w3-05T">
@@ -762,7 +762,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="63u-Tb-hd9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2460" y="-1221.1394302848576"/>
+            <point key="canvasLocation" x="2457" y="-1329"/>
         </scene>
         <!--Room List View Controller-->
         <scene sceneID="u36-Ee-kkp">
@@ -868,7 +868,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z9L-jk-Cdg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2457" y="-544"/>
+            <point key="canvasLocation" x="2457" y="-619"/>
         </scene>
         <!--Room Info-->
         <scene sceneID="f1q-f6-7Ij">
@@ -879,11 +879,11 @@
                         <viewControllerLayoutGuide type="bottom" id="kga-Nd-6NS"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Pyw-Ea-0tE">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FZm-Ua-osW">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="519"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="627"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ign-D2-4H8" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="771.5"/>
@@ -1061,8 +1061,8 @@
                                 </constraints>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xnH-Hm-Mss">
-                                <rect key="frame" x="0.0" y="519" width="375" height="40"/>
-                                <color key="backgroundColor" red="0.99064570669999996" green="0.2949601114" blue="0.45124942060000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="0.0" y="627" width="375" height="40"/>
+                                <color key="backgroundColor" red="0.99215686274509807" green="0.29411764705882354" blue="0.45098039215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="kek-Dz-4KQ"/>
                                 </constraints>
@@ -1123,7 +1123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5H0-de-eIt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2456.8000000000002" y="166.8665667166417"/>
+            <point key="canvasLocation" x="1401" y="167"/>
         </scene>
         <!--Contact List-->
         <scene sceneID="BHW-W4-gsh">
@@ -1134,7 +1134,7 @@
                         <viewControllerLayoutGuide type="bottom" id="m85-ek-HWA"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="d6E-QG-SbC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bCu-Ci-Y2q">
@@ -1208,7 +1208,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="94L-2S-nLK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2460" y="912"/>
+            <point key="canvasLocation" x="1401" y="1006"/>
         </scene>
         <!--회원가입-->
         <scene sceneID="zVg-GF-8sr">
@@ -1301,7 +1301,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3ZA-Ec-WwL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1305" y="-619"/>
+            <point key="canvasLocation" x="414" y="-619"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="icZ-Tr-kP7">
@@ -1317,7 +1317,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1as-dF-5pg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="97" y="-619"/>
+            <point key="canvasLocation" x="-1108" y="-619"/>
         </scene>
         <!--로그인-->
         <scene sceneID="SuB-Fk-PUA">
@@ -1404,7 +1404,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c6C-KN-FWY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-598" y="-619"/>
+            <point key="canvasLocation" x="-314" y="-619"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="dkw-n1-WVY">
@@ -1455,7 +1455,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sac-PO-bOZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="414" y="864"/>
+            <point key="canvasLocation" x="-314" y="958"/>
         </scene>
         <!--Chat-->
         <scene sceneID="PqL-Vt-wh2">
@@ -1466,7 +1466,7 @@
                         <viewControllerLayoutGuide type="bottom" id="v5i-Ll-VFZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="CYr-Ss-Sbh">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="77" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sSK-aA-JY8">
@@ -1533,7 +1533,7 @@
                                 </connections>
                             </tableView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LrD-kx-fWp">
-                                <rect key="frame" x="0.0" y="515" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem style="plain" id="MVX-By-TdI">
@@ -1566,7 +1566,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qUK-Ga-TGF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3384.8000000000002" y="162.3688155922039"/>
+            <point key="canvasLocation" x="2457" y="163"/>
         </scene>
         <!--Room List View Controller-->
         <scene sceneID="wVp-ST-m1x">
@@ -1657,7 +1657,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GdT-NE-mfE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1401" y="864"/>
+            <point key="canvasLocation" x="414" y="958"/>
         </scene>
     </scenes>
     <resources>
@@ -1665,7 +1665,7 @@
         <image name="photoPlaceHolder" width="750" height="540"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="oRq-6e-c6u"/>
+        <segue reference="7rV-vU-y6L"/>
         <segue reference="aM6-N5-fl5"/>
     </inferredMetricsTieBreakers>
 </document>
